--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -36,10 +36,10 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@assistant-ui/react": "^0.5.100",
-    "@assistant-ui/react-ai-sdk": "^0.6.19",
-    "@assistant-ui/react-markdown": "^0.2.27",
-    "@assistant-ui/react-syntax-highlighter": "^0.0.18",
+    "@assistant-ui/react": "^0.7.53",
+    "@assistant-ui/react-ai-sdk": "^0.7.11",
+    "@assistant-ui/react-markdown": "^0.7.11",
+    "@assistant-ui/react-syntax-highlighter": "^0.7.9",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -55,11 +55,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^3.4.33",
+    "ai": "^4.1.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
