--- a/packages/rag/package.json
+++ b/packages/rag/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@langchain/core": "^0.3.30",
-    "@langchain/openai": "^0.3.17",
+    "@langchain/core": "^0.3.36",
+    "@langchain/openai": "^0.4.2",
     "@repo/db": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.11.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "cheerio": "^1.0.0",
     "common-tags": "^1.8.2",
     "content-type": "^1.0.5",
     "llamaindex": "^0.8.31",
     "node-html-markdown": "^1.3.0",
+    "openai": "^4.80.1",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
   },
