--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -41,6 +41,7 @@
     "@assistant-ui/react-markdown": "^0.7.11",
     "@assistant-ui/react-syntax-highlighter": "^0.7.9",
     "@hookform/resolvers": "^3.9.0",
+    "@multiavatar/multiavatar": "^1.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -76,6 +77,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.1",
     "zustand": "^5.0.0"
   },
