feat: Added MCP server

--- a/apps/saas/package.json
+++ b/apps/saas/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_NO_WARNINGS=1 next dev --port 3000",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "vercel-build": "pnpm db:migrate && next build",
     "start": "next start",
