--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ragrabbit",
   "version": "0.0.1",
   "private": true,
+  "workspaces": ["packages/*", "apps/*"],
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
