--- a/packages/rag/package.json
+++ b/packages/rag/package.json
@@ -13,12 +13,17 @@
   "dependencies": {
     "@langchain/core": "^0.3.36",
     "@langchain/openai": "^0.4.2",
+    "@llamaindex/anthropic": "^0.1.0",
+    "@llamaindex/groq": "^0.0.51",
+    "@llamaindex/huggingface": "^0.0.36",
+    "@llamaindex/openai": "^0.1.52",
+    "@llamaindex/postgres": "^0.0.33",
     "@repo/db": "workspace:*",
     "@t3-oss/env-nextjs": "^0.12.0",
     "cheerio": "^1.0.0",
     "common-tags": "^1.8.2",
     "content-type": "^1.0.5",
-    "llamaindex": "^0.8.31",
+    "llamaindex": "^0.9.0",
     "node-html-markdown": "^1.3.0",
     "openai": "^4.80.1",
     "ts-node": "^10.9.2",
