--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ragrabbit",
   "version": "0.0.1",
   "private": true,
-  "workspaces": ["packages/*", "apps/*"],
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -17,7 +20,7 @@
     "db:fg": "cd packages/db && ./scripts/start-database.sh",
     "syncpack:fix": "syncpack fix-mismatches",
     "syncpack:update": "syncpack update",
-    "export": "rsync -a --progress . ../ragrabbit_public --exclude '/.git' --exclude '/apps/web' --exclude 'node_modules' --exclude 'dist'  --exclude '.turbo'  --exclude '.coverage' --exclude '.next' --exclude '.rollup.cache' --exclude '.netlify' --exclude '.output'",
+    "export": "rsync -a --delete --progress . ../ragrabbit_public --exclude '/.git' --exclude '/apps/web' --exclude 'node_modules' --exclude 'dist'  --exclude '.turbo'  --exclude '.coverage' --exclude '.next' --exclude '.rollup.cache' --exclude '.netlify' --exclude '.output'",
     "import": "rsync -a --progress ../ragrabbit_public/ . --exclude '/.pnpm-lock.yaml'  --exclude '/apps/web' --exclude '/.package.json' --exclude '/.git' --exclude 'node_modules' --exclude 'dist'  --exclude '.turbo'  --exclude '.coverage' --exclude '.next' --exclude '.rollup.cache' --exclude '.netlify' --exclude '.output'"
   },
   "devDependencies": {
